chapter_cicd/apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: ghcr.io/cloudnativedaysjp/cnd-handson-app/frontend:latest
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - name: http
          containerPort: 5173
          protocol: TCP
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 300m
      terminationGracePeriodSeconds: 15
