chapter_cicd/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5173
    name: http
  selector:
    app: frontend
